# Power-Automate-Plugin

./: .gitignore  CICD_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_TEST.md  PIPELINE_TEST_20250723-123934.md  README.md  package-lock.json  package.json  pyproject.toml  setup-azure-infrastructure.ps1  setup-github-secrets.ps1  setup.py
.azure-pipelines/: azure-pipelines.yml
.github/workflows/: ci.yml  deploy.yml
docs/: CICD_SETUP.md
scripts/: azuredevops-deploy.ps1  deploy.ps1  validate-schemas.js
src/declarative/: manifest.json
src/declarative/openapi/: openapi.json
src/declarative/schemas/: schemas.json
src/power_automate/: __init__.py  main.py
tests/unit/: test_main.py
